<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="TODO"
            android:src="@drawable/login_foto"
            android:translationY="150dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/rounded_login_shape"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login_atau_daftar"
                android:textAlignment="center"
                android:textColor="@color/color_text_black"
                android:textSize="25sp"
                android:textStyle="normal" />
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/kebijakanTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kebijakan"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:textAlignment="center"
                android:textColor="@color/color_text_black"
                android:layout_marginHorizontal="30dp"/>
            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/border_black_solid"
                android:orientation="vertical">

                <Button
                    android:id="@+id/loginid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_login_selector"
                    android:drawableStart="@drawable/logo_google"
                    android:paddingHorizontal="12dp"
                    android:text="@string/lanjutkan_dengan_google"
                    android:textColor="@color/color_text_black"
                    android:textSize="17sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
