<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/fragment_date"
    android:layout_height="wrap_content"
    tools:context=".view.fragment.DateAndCategoryCampFragment">
    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:gravity="center">
            <TextView
                android:fontFamily="@font/poppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanggal"
                android:textSize="15sp"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                android:textColor="@color/hintText"/>
            <EditText
                android:textSize="13sp"
                android:fontFamily="@font/poppins"
                android:id="@+id/edit_text_date_camp"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                android:drawableStart="@drawable/ic_baseline_calendar_month_24"
                android:background="@drawable/rounded_edit_text"
                android:textColorHint="@color/hintText"
                android:textColor="@color/color_text_black"
                android:hint="@string/masukan_tanggal_kunjungan_anda"
                android:autofillHints="" />
            <TextView
                android:fontFamily="@font/poppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Apakah Anda Ingin Berkemah"
                android:textSize="15sp"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                android:textColor="@color/hintText"/>
            <EditText
                android:textSize="13sp"
                android:fontFamily="@font/poppins"
                android:hint="Pilih Opsi Berkemah"
                android:id="@+id/option_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:focusable="false"
                android:clickable="true"
                android:layout_marginBottom="20dp"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:background="@drawable/rounded_edit_text"
                android:textColorHint="@color/hintText"
                android:textColor="@color/color_text_black"
                android:autofillHints="" />
            <Button
                android:fontFamily="@font/poppins"
                android:id="@+id/btn_next"
                android:layout_marginBottom="100dp"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginTop="200dp"
                android:text="@string/berikutnya"
                android:textStyle="bold"
                android:background="@drawable/button_rounded_blue"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>